--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "@bangbang93/node-apollo",
   "version": "2.0.0",
   "description": "携程Apollo配置中心SDK。",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "pretest": "tsc --noEmit",
-    "test": "mocha",
+    "test": "jest",
     "posttest": "npm run format",
-    "format": "prettier --loglevel warn --write \"**/*.{ts,tsx,css,md}\""
+    "format": "prettier --loglevel warn --write \"**/*.{ts,tsx,css,md}\"",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -23,19 +24,23 @@
   "devDependencies": {
     "@bangbang93/eslint-config-recommended": "^0.0.5",
     "@tsconfig/node18": "^2.0.1",
+    "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.195",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "mocha": "^3.5.3",
+    "jest": "^29.5.0",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
     "got": "^11.8.6",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "tslib": "^2.5.3"
   }
 }
