--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@bangbang93/node-apollo",
   "version": "2.0.0",
   "description": "携程Apollo配置中心SDK。",
-  "main": "lib/index.js",
+  "main": "lib/apollo.js",
+  "types": "lib/apollo.d.ts",
   "scripts": {
     "pretest": "tsc --noEmit",
     "test": "jest",
@@ -42,5 +43,8 @@
     "got": "^11.8.6",
     "lodash": "^4.17.21",
     "tslib": "^2.5.3"
-  }
+  },
+  "files": [
+    "lib"
+  ]
 }
