fix: build script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "posttest": "npm run format",
     "format": "prettier --loglevel warn --write \"**/*.{ts,tsx,css,md}\"",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "prepublishOnly": "npm run build"
   },
   "repository": {
